syntax = "proto3";
package hyperlane.warp.v1;

option go_package = "github.com/troykessler/hyperlane-cosmos/x/warp/types";

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "amino/amino.proto";

// Params
message Params { option (amino.name) = "hyperlane/warp/Params"; }

// GenesisState is the state that must be provided at genesis.
message GenesisState {
  Params params = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
  repeated HypToken tokens = 2
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}

// HypToken ...
message HypToken {
  string id = 1 [
    (gogoproto.customtype) =
        "github.com/troykessler/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];
  string owner = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  HypTokenType token_type = 3;

  string origin_mailbox = 4 [
    (gogoproto.customtype) =
        "github.com/troykessler/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];
  string origin_denom = 5;

  string collateral_balance = 6 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  string ism_id = 7 [
    (gogoproto.customtype) =
        "github.com/troykessler/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = true
  ];
}

// RemoteRouter ...
message RemoteRouter {
  uint32 receiver_domain = 1;
  string receiver_contract = 2;
  string gas = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// HypTokenType ...
enum HypTokenType {
  option (gogoproto.goproto_enum_prefix) = false;

  // HYP_TOKEN_TYPE_UNSPECIFIED ...
  HYP_TOKEN_TYPE_UNSPECIFIED = 0;

  // HYP_TOKEN_TYPE_COLLATERAL ...
  HYP_TOKEN_TYPE_COLLATERAL = 1;

  // HYP_TOKEN_TYPE_SYNTHETIC ...
  HYP_TOKEN_TYPE_SYNTHETIC = 2;
}
